--- a/docs/_layouts/subpage.html
+++ b/docs/_layouts/subpage.html
@@ -39,7 +39,7 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
+          <h1 id="project_title">SPRITEs NVDA Add-on Tutorial</h1>
         </header>
     </div>
 
