--- a/docs/_layouts/tutorial.html
+++ b/docs/_layouts/tutorial.html
@@ -40,8 +40,8 @@
     <div id="header_wrap" class="outer">
         <header class="inner">
 
-          <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
-          <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
+          <h1 id="project_title">SPRITEs NVDA Add-on Tutorial</h1>
+          <h2 id="project_tagline">Step-by-step tutorial on how to use the SPRITEs Add-on with NVDA, including keyboard navigation and keyword search.</h2>
         </header>
     </div>
 
@@ -57,7 +57,7 @@
     <div id="footer_wrap" class="outer">
       <footer class="inner">
         {% if site.github.is_project_page %}
-        <p class="copyright">{{ site.title | default: site.github.repository_name }} maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
+        <p class="copyright">SPRITEs NVDA Add-on Tutorial maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
         <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
