--- a/docs/_layouts/mainpage.html
+++ b/docs/_layouts/mainpage.html
@@ -28,7 +28,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
+        <p>Copyright &copy; {{ site.time | date: '%Y' }}, Make4All</p>
       </footer>
     </div>
   </body>
