--- a/docs/_layouts/tutorial.html
+++ b/docs/_layouts/tutorial.html
@@ -56,10 +56,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        {% if site.github.is_project_page %}
-        <p class="copyright">SPRITEs NVDA Add-on Tutorial maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
-        {% endif %}
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
+        <p>Copyright &copy; {{ site.time | date: '%Y' }}, Make4All</p>
       </footer>
     </div>
 
