Added logos to footer

--- a/docs/_layouts/mainpage.html
+++ b/docs/_layouts/mainpage.html
@@ -25,11 +25,6 @@
       </section>
     </div>
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p>Copyright &copy; {{ site.time | date: '%Y' }}, Make4All</p>
-      </footer>
-    </div>
+    {% include footer.html %}
   </body>
 </html>
