--- a/docs/_layouts/tutorial.html
+++ b/docs/_layouts/tutorial.html
@@ -53,12 +53,7 @@
       </section>
     </div>
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p>Copyright &copy; {{ site.time | date: '%Y' }}, Make4All</p>
-      </footer>
-    </div>
+    {% include footer.html %}
 
     {% if site.google_analytics %}
       <script>
