--- a/docs/_sass/main.scss
+++ b/docs/_sass/main.scss
@@ -36,3 +36,21 @@ label {
 .inner {
     max-width: 680px;
 }
+
+footer img {
+    width: 50px;
+    height: 50px;
+    background-color: white;
+    margin-left: 20px;
+    margin-right: 20px;
+    box-shadow: 0 0 0px #ebebeb;
+    -webkit-box-shadow: 0 0 0px #ebebeb;
+}
+
+footer {
+    text-align: center;
+}
+
+.create-logo {
+    width: 60px;
+}
